--- a/coba.css
+++ b/coba.css
@@ -8,7 +8,6 @@ body {
 
 body {
     height: 8000px;
-    background-color: var(--bg-secondary);
 }
 
 :root {
@@ -83,10 +82,6 @@ body {
     font-size: 4em;
 }
 
-.fw-500 {
-    font-weight: 500;
-}
-
 .text-primary {
     color: var(--text-primary);
 }
@@ -97,14 +92,6 @@ body {
 
 .gap {
     gap: 20px;
-}
-
-.gap-10 {
-    gap: 10px;
-}
-
-.gap-2em {
-    gap: 2em;
 }
 
 .text-center {
@@ -131,19 +118,6 @@ body {
     position: absolute;
 }
 
-.background-1 {
-    background-color: white;
-}
-
-.background-2 {
-    background-color: tomato;
-}
-
-.background-3 {
-    background-color: yellow;
-}
-
-
 /* Card */
 
 .card1 {
@@ -166,34 +140,22 @@ body {
     border-radius: 10px;
 }
 
-/* Card 2 */
-
-.card2 {
-    width: 22em;
-}
-
-.img-card2 {
-    margin-top: 3px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-
 /* Thumbnail */
 .thumbnail {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 29rem;
-    height: 7rem;
+    width: 326px;
+    height: 91px;
     background-color: tomato;
     gap: 5px;
+    overflow: hidden;
+    margin-top: 300px;
 }
 
 .img-thumbnail {
-    width: 20rem;
-    height: 12rem;
-    border-radius: 10px;
+    width: 25%;
+    height: 100%;
 }
 
 .text-thumbnail {
